--- a/shelter/pages/pets/style.css
+++ b/shelter/pages/pets/style.css
@@ -72,13 +72,8 @@ a {
     }
 }
 
-.header {
-    background-color: #FFFFFF;
-}
-
 .container {
     max-width: 1280px;
-    min-width: 1280px;
     margin: 0 auto;
 }
 
@@ -122,7 +117,6 @@ a {
 .nav-link {
     color: #545454;
     font-weight: 300;
-    position: relative;
 }
 
 .nav-link:hover {
@@ -142,7 +136,7 @@ a {
     pointer-events: none;
 }
 
-.main {
+#our-friends {
     background-color: #F6F6F6;
 }
 
@@ -306,12 +300,6 @@ a {
 }
 
 .footer-right {
-    position: relative;
+    height: 310px;
     width: 300px;
-}
-
-.footer-img {
-    position: absolute;
-    bottom: 0;
-    left: 0;
 }
